--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -2,10 +2,10 @@
   "expo": {
     "name": "Eden",
     "slug": "eden-ai",
-    "scheme": "eden.thecommit.company",
+    "scheme": "raven.thecommit.company",
     "version": "1.1.3",
     "orientation": "portrait",
-    "icon": "./assets/eden-icon.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -16,7 +16,7 @@
     "ios": {
       "supportsTablet": false,
       "appleTeamId": "W6346TTZQX",
-      "bundleIdentifier": "eden.thecommit.company",
+      "bundleIdentifier": "raven.thecommit.company",
       "config": {
         "usesNonExemptEncryption": false
       },
@@ -33,15 +33,15 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/eden-adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#000000"
       },
       "softwareKeyboardLayoutMode": "pan",
-      "package": "eden.thecommit.company",
+      "package": "raven.thecommit.company",
       "googleServicesFile": "./google-services.json"
     },
     "web": {
-      "favicon": "./assets/eden-favicon.png"
+      "favicon": "./assets/favicon.png"
     },
     "plugins": [
       [
