--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Eden",
     "slug": "eden-ai",
-    "scheme": "raven.thecommit.company",
+    "scheme": "ai.eden.app",
     "version": "1.1.3",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,7 +16,7 @@
     "ios": {
       "supportsTablet": false,
       "appleTeamId": "W6346TTZQX",
-      "bundleIdentifier": "raven.thecommit.company",
+      "bundleIdentifier": "ai.eden.app",
       "config": {
         "usesNonExemptEncryption": false
       },
@@ -37,7 +37,7 @@
         "backgroundColor": "#000000"
       },
       "softwareKeyboardLayoutMode": "pan",
-      "package": "raven.thecommit.company",
+      "package": "ai.eden.app",
       "googleServicesFile": "./google-services.json"
     },
     "web": {
@@ -77,9 +77,9 @@
         "origin": false
       },
       "eas": {
-        "projectId": "3a173ddd-f22a-4f81-8279-40dcee6c29d5"
+        "projectId": "3af40f16-fd7d-490b-b111-b7e2d6f36fa1"
       }
     },
-    "owner": "the-commit-company"
+    "owner": "kirollos21"
   }
 }
