--- a/apps/mobile/GoogleService-Info.plist
+++ b/apps/mobile/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBeMvrmiY5bXIjAUlR03sQKH5NGNkS7d6Y</string>
+	<string>AIzaSyD2SVnvwv5MsQx1D_-f8840wIkHTGQXSW8</string>
 	<key>GCM_SENDER_ID</key>
-	<string>257310726313</string>
+	<string>505189131743</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>raven.thecommit.company</string>
+	<string>ai.eden.app</string>
 	<key>PROJECT_ID</key>
-	<string>raven-c2659</string>
+	<string>eden-ai-ea516</string>
 	<key>STORAGE_BUCKET</key>
-	<string>raven-c2659.firebasestorage.app</string>
+	<string>eden-ai-ea516.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:257310726313:ios:a192c58ca3307514a631b8</string>
+	<string>1:505189131743:ios:c1c8c23318c6220570906a</string>
 </dict>
 </plist>
